--- a/assets/css/noscript.css
+++ b/assets/css/noscript.css
@@ -1,21 +1,16 @@
 /*
-	Ethereal by HTML5 UP
+	Parallelism by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Page */
+/* Main */
 
-	body {
-		overflow-x: scroll;
+	#main {
+		opacity: 1 !important;
+		overflow-x: auto !important;
 	}
 
-/* Wrapper */
-
-	body.is-preload #wrapper {
-		-moz-transform: none;
-		-webkit-transform: none;
-		-ms-transform: none;
-		transform: none;
-		opacity: 1;
-	}
+		#main .item.thumb img {
+			opacity: 1 !important;
+		}
