--- a/assets/sass/noscript.scss
+++ b/assets/sass/noscript.scss
@@ -5,22 +5,22 @@
 @import 'libs/breakpoints';
 
 /*
-	Ethereal by HTML5 UP
+	Parallelism by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Page */
+/* Main */
 
-	body {
-		overflow-x: scroll;
-	}
+	#main {
+		opacity: 1 !important;
+		overflow-x: auto !important;
 
-/* Wrapper */
-
-	#wrapper {
-		body.is-preload & {
-			@include vendor('transform', 'none');
-			opacity: 1;
+		.item {
+			&.thumb {
+				img {
+					opacity: 1 !important;
+				}
+			}
 		}
 	}
